Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-2197

http_sm may not perceive client_vc`s aborted if it is not a new connection

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 4.1.2
    • HTTP
    • None

    Description

      for a keepalive connection, the second request maybe already in the ua_buffer, the current code disabled the client_vc`s read when parse the http_hdr in such case, which means we can not notified the client_vc is aborted as soon as possible.

      Attachments

        1. TS-2197.wj.diff
          1 kB
          Wei Jin

        Activity

          People

            Unassigned Unassigned
            weijin Wei Jin
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: