TS-2197

use HttpSM::main_handler to handle the client request stuff ranther
than directly call the HttpSM::state_read_client_request.

reenable the client_vc even if the ua_buffer_reader is not empty, or
else we may not perceive client_vc`s aborted.